fix menu icon nav on safari

--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@ html,body{
            
             .custom-toggler.navbar-toggler {
                 border-color: rgb(255, 255, 255);
+                
             }
-            .custom-toggler .navbar-toggler-icon {
+
+            /* .custom-toggler .navbar-toggler-icon {
                 background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255, 255, 255, 0.9)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-              }
+              } */
             
            
 
@@ -52,7 +54,11 @@ html,body{
                 text-decoration: none;
             }
             .blue{
-                color: 	#6BCDFD;
+                color: #6BCDFD;
+            }
+
+            .white{
+                color: white;
               }
             .vl{
                 border-left: 2px solid #6BCDFD;
